Replace deprecated primitive wrapper class constructors
Replace new Integer(i) with Integer.valueOf(i) etc, since the
use of these constructors is deprecated at Java 9 for eventual
removal from the JDK.